# NRG-seminar

./: .gitignore  LICENSE.md  README.md  benchmark_visualization.py  compression.md  main.py  plot_lod_curves.py  plot_lod_func.py  pyproject.toml  zapiski
measurements/compression_optimization/sample/: avoid_repeated_calls_sample  base_sample  vectorized_sample
measurements/lod_points_calculation/: explanation  plot_lod_curves.py
measurements/lod_points_calculation/exponential/: num_points
measurements/lod_points_calculation/exponential2/: num_points
measurements/sample/: avoid_repeated_calls_sample  vectorized_sample
measurements/visualization/: ljubljana.laz_tiles_10x10_lods_10.json  ljubljana.laz_tiles_10x10_lods_5.json  ljubljana.laz_tiles_1x10_lods_5.json  ljubljana.laz_tiles_1x5_lods_10.json  ljubljana.laz_tiles_1x5_lods_5.json  ljubljana.laz_tiles_5x5_lods_10.json  ljubljana.laz_tiles_5x5_lods_5.json  ljubljanski_grad.las_tiles_10x10_lods_10.json  ljubljanski_grad.las_tiles_10x10_lods_5.json  ljubljanski_grad.las_tiles_1x10_lods_10.json  ljubljanski_grad.las_tiles_1x10_lods_5.json  ljubljanski_grad.las_tiles_1x5_lods_10.json  ljubljanski_grad.las_tiles_1x5_lods_5.json  ljubljanski_grad.las_tiles_5x5_lods_10.json  ljubljanski_grad.las_tiles_5x5_lods_5.json
professor_code/SensitivitySampling-main/: Evaluation.py  SensirivitySamplingUpgrade.py  SensitivitySampling.py  main.py  make_benchmark.py
src/: main.py  point_classification.py  point_cloud.py  sensitivity_sampling.py
src/visualization/: app.py  camera.py  shaders.py  tile_manager.py
(+3 files in other folders)
