[project]
name = "NRG-seminar"
version = "0.1.0"
description = "Seminarska naloga pri predmetu NRG"
authors = [{ name = "Iztok Bajcar", email = "iztok.bajcar@gmail.com" }]
dependencies = ["laspy[lazrs]>=2.5.4"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python3 src/main.py"
